# prelegal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json
.github/workflows/: ci.yml
backend/: .flake8  pyproject.toml
backend/app/: ai_service.py  auth_utils.py  config.py  database.py  dependencies.py  main.py  models.py
backend/app/documents/: ai_addendum.py  baa.py  csa.py  design_partner.py  dpa.py  nda.py  partnership.py  pilot.py  psa.py  registry.py  select.py  sla.py  software_license.py
backend/app/routers/: auth.py  chat.py  documents.py  users.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_registry.py  test_select.py
frontend/: TESTING.md  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/: ChatPanel.test.tsx  DocumentSelectorChat.test.tsx  NdaChat.test.tsx  NdaForm.test.tsx  NdaPreview.test.tsx  catalog.test.ts  nda-fields.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AiAddendumForm.tsx  AiAddendumPreview.tsx  AppLayout.tsx  AuthModal.tsx  BaaForm.tsx  BaaPreview.tsx  ChatPanel.tsx  CsaForm.tsx  CsaPreview.tsx  DesignPartnerForm.tsx  DesignPartnerPreview.tsx  DocCreator.tsx  DocumentSelectorChat.tsx  DpaForm.tsx  (+16 more)
scripts/: capture-screenshots.js  start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: AI-Addendum.md  BAA.md  CSA.md  DPA.md  LICENSE.txt  Mutual-NDA-coverpage.md  Partnership-Agreement.md  Pilot-Agreement.md  Software-License-Agreement.md  design-partner-agreement.md  psa.md  sla.md
(+32 files in other folders)
