[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal API backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "litellm>=1.82.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
